<resources>
    <string name="app_name">Instagram</string>
    <string name="instagram_clone">Instagram Clone</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="not_a_member">Not a member?</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="already_a_member">Already a member?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="favorite_fragment">Favorite Fragment</string>
    <string name="location">location</string>
    <string name="_2_views">2 views</string>
    <string name="some_comment_goes_here">some comment goes here</string>
    <string name="view">View</string>
    <string name="all_20">all 20</string>
    <string name="comments">comments</string>
    <string name="some_description">Some description...</string>
    <string name="create_post">Create Post</string>
    <string name="instagram">Instagram</string>
</resources>
