<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:padding="20dp"
    android:layout_gravity="center"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/instagram_clone"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/login_passWord"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"

        />

    <TextView
        android:id="@+id/not_a_member_yet"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/not_a_member"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        />

</LinearLayout>